--- a/index.html
+++ b/index.html
@@ -303,19 +303,21 @@
                 </div>
             </div>
         </section>
-
+        
         <section class="section section-white">
-            <div class="container">
-                <h2 style="color: var(--medium-blue);">Nossos Clientes Confiam</h2>
-                <div class="logos-clients">
-                    <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/Lello_Imoveis%20copiar%20(1).png" alt="logo lello Imóveis">
-                    <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/aiello-logo%20copiar.png" alt="Logo Aiello">
-                    <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/gpx%20imoveis%20copiar%20(1).png" alt="Logo gpx imoveis">
-                    <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/lello%20condominios%20copiar%20(1).png" alt="Logo lello condominios">
-                    <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/rgprime%20copiar.png" alt="Logo rgprime">
-                </div>
-            </div>
-        </section>
+    <div class="container">
+        <h2 style="color: var(--medium-blue);">A escolha de quem lidera o mercado imobiliário</h2>
+        <p style="text-align: center;">Com mais de <strong style="color: var(--medium-blue);">600 clientes</strong> do setor, nossa plataforma é a ferramenta de inteligência de dados que as principais imobiliárias, incorporadoras e construtoras utilizam para proteger seus ativos e garantir a segurança de cada transação.</p>
+        <div class="logos-clients">
+            <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/Lello_Imoveis%20copiar%20(1).png" alt="logo lello Imóveis">
+            <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/Logo-Invista_pdf.png" alt="Logo InvistaI">
+            <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/logo-invest-corp.png.webp" alt="Logo InvestCorp">
+            <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/lello%20condominios%20copiar%20(1).png" alt="Logo lello condominios">
+            <img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/logo_gdi_17-07%20(1).png" alt="Logo Gdi">
+<img src="https://raw.githubusercontent.com/sacapinformacao/clientes/main/momentum-empreendimentos-imobili%C3%A1rios-squarelogo-1553662960731.webp" alt="Logo Momentum">
+        </div>
+    </div>
+</section>
 
         <section class="section section-white">
             <div class="container">
