--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <li><a href="https://sacapinformacao.github.io/BackGroundCheck/">Background Check</a></li>
                 <li><a href="https://sacapinformacao.github.io/Veiculos/">Análise de Veículos</a></li>
                 <li><a href="https://sacapinformacao.github.io/Enriquecimento/">Enriquecimento de Dados</a></li>
-                <li><a href="https://apinformacao.net.br/site/lgpd/">Compliance e LGPD</a></li>
+                <li><a href="https://sacapinformacao.github.io/Compliance/">Compliance e LGPD</a></li>
               </ul>
             </li>
             <li>
@@ -456,4 +456,5 @@
 
 </body>
 </html>
+
 
