--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                 <li><a href="https://sacapinformacao.github.io/Landpage-Industrias/">Industrial</a></li>
               </ul>
             </li>
-            <li><a href="https://apinformacao.net.br/site/planos/">Planos</a></li>
+            <li><a href="https://sacapinformacao.github.io/Planos/">Planos</a></li>
             <li><a href="https://apinformacao.net.br/site/sobre-nos/">Sobre Nós</a></li>
           </ul>
         </nav>
@@ -456,5 +456,6 @@
 
 </body>
 </html>
+
 
 
