--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
               </ul>
             </li>
             <li><a href="https://sacapinformacao.github.io/Planos/">Planos</a></li>
-            <li><a href="https://apinformacao.net.br/site/sobre-nos/">Sobre Nós</a></li>
+            <li><a href="https://sacapinformacao.github.io/sobre-nos/">Sobre Nós</a></li>
           </ul>
         </nav>
         <div class="header-cta">
@@ -456,6 +456,7 @@
 
 </body>
 </html>
+
 
 
 
